Project counter letter-spacing fix

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3731,6 +3731,7 @@ body {
 		padding: 0 80px 20px 0;
 		text-transform: uppercase;
 		color: fade(@side, 60);
+		letter-spacing: 0.6px;
 
 		.font (11px, 16px, 500);
 
